--- a/Demo/App/Controls/BackButton.xaml
+++ b/Demo/App/Controls/BackButton.xaml
@@ -2,7 +2,7 @@
 <ContentView x:Class="App.Controls.BackButton"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:stateButton="clr-namespace:StateButton;assembly=StateButton"
+             xmlns:stateButton="clr-namespace:IeuanWalker.Maui.StateButton;assembly=IeuanWalker.Maui.StateButton"
              HorizontalOptions="Start">
     <ContentView.ControlTemplate>
         <ControlTemplate>
