--- a/Demo/App/MainPage.xaml
+++ b/Demo/App/MainPage.xaml
@@ -9,6 +9,7 @@
             <controls:CustomButton Clicked="CustomSwitchBtn_Clicked" Text="CustomSwitch examples" />
             <controls:CustomButton Clicked="SwitchViewBtn_Clicked" Text="SwitchView examples" />
             <controls:CustomButton Clicked="AccessibilityBtn_Clicked" Text="Accessiblity tests" />
+            <controls:CustomButton Clicked="IsEnabledBtn_Clicked" Text="IsEnabled tests" />
             <controls:CustomButton Clicked="PanGestureBtn_Clicked" Text="PanGesture tests" />
         </VerticalStackLayout>
     </ContentPage.Content>
