Added IsBusy functionality to CustomSwitch control
Two new files, `IsBusyTestPage.xaml.cs` and `IsBusyTestPage.xaml`, have been added to `App.csproj`. The `CustomSwitch` control in `IosSwitch.xaml` and `CustomSwitch.xaml` now has a new `IsBusy` property, indicating whether the switch is busy, and an `IsBusyContent` property, which displays an `ActivityIndicator` when the switch is busy. A new button has been added to `MainPage.xaml` that navigates to the `IsBusyTestPage`. The `IsBusyTestPage.xaml` contains two `IosSwitch` controls bound to the `IsToggled` property of a `DynamicToggle` switch.

--- a/Demo/App/MainPage.xaml
+++ b/Demo/App/MainPage.xaml
@@ -10,6 +10,7 @@
             <controls:CustomButton Clicked="SwitchViewBtn_Clicked" Text="SwitchView examples" />
             <controls:CustomButton Clicked="AccessibilityBtn_Clicked" Text="Accessiblity tests" />
             <controls:CustomButton Clicked="IsEnabledBtn_Clicked" Text="IsEnabled tests" />
+            <controls:CustomButton Clicked="IsBusyBtn_Clicked" Text="IsBusy tests" />
             <controls:CustomButton Clicked="PanGestureBtn_Clicked" Text="PanGesture tests" />
         </VerticalStackLayout>
     </ContentPage.Content>
