--- a/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/IosSwitch.xaml
@@ -5,6 +5,7 @@
              xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
     <switch:CustomSwitch HeightRequest="40"
                          HorizontalKnobMargin="1"
+                         IsBusy="{Binding IsBusy, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                          IsEnabled="{Binding IsEnabled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
                          KnobBackgroundColor="White"
@@ -52,5 +53,11 @@
                        VerticalTextAlignment="Center" />
             </Grid>
         </switch:CustomSwitch.BackgroundContent>
+        <switch:CustomSwitch.IsBusyContent>
+            <ActivityIndicator HeightRequest="30"
+                               IsRunning="True"
+                               WidthRequest="30"
+                               Color="Black" />
+        </switch:CustomSwitch.IsBusyContent>
     </switch:CustomSwitch>
 </ContentView>
