--- a/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <ContentView x:Class="App.Controls.CustomSwitchExamples.AndroidSwitch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
