Add xmlns:control and x:DataType to various XAML files
Added xmlns:control namespace to reference App.Controls or
App.Controls.CustomSwitchExamples in multiple XAML files.
Added x:DataType attribute to enable compile-time data binding
checks and IntelliSense support. Reordered xmlns:stateButton
namespace and added x:DataType in CustomButton.xaml. Added
x:DataType to examples:IosSwitch elements and DataTrigger
elements in IsBusyTestPage.xaml and IsEnabledTestPage.xaml.
Added x:DataType to Grid element in CustomSwitch.xaml.

--- a/Demo/App/Controls/CustomButton.xaml
+++ b/Demo/App/Controls/CustomButton.xaml
@@ -2,7 +2,9 @@
 <ContentView x:Class="App.Controls.CustomButton"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:stateButton="clr-namespace:IeuanWalker.Maui.StateButton;assembly=IeuanWalker.Maui.StateButton">
+             xmlns:control="clr-namespace:App.Controls"
+             xmlns:stateButton="clr-namespace:IeuanWalker.Maui.StateButton;assembly=IeuanWalker.Maui.StateButton"
+             x:DataType="control:CustomButton">
     <ContentView.ControlTemplate>
         <ControlTemplate>
             <stateButton:StateButton Padding="20,20"
