--- a/Demo/App/Controls/CustomSwitchExamples/Theme1Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Theme1Switch.xaml
@@ -2,7 +2,9 @@
 <ContentView x:Class="App.Controls.CustomSwitchExamples.Theme1Switch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
+             xmlns:control="clr-namespace:App.Controls.CustomSwitchExamples"
+             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch"
+             x:DataType="control:Theme1Switch">
     <switch:CustomSwitch BackgroundColor="White"
                          HeightRequest="50"
                          IsToggled="{Binding IsToggled, Source={RelativeSource AncestorType={x:Type ContentView}}}"
