--- a/Demo/App/Controls/CustomSwitchExamples/Theme2Switch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/Theme2Switch.xaml
@@ -2,7 +2,9 @@
 <ContentView x:Class="App.Controls.CustomSwitchExamples.Theme2Switch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
+             xmlns:control="clr-namespace:App.Controls.CustomSwitchExamples"
+             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch"
+             x:DataType="control:Theme2Switch">
     <switch:CustomSwitch BackgroundColor="White"
                          HeightRequest="40"
                          HorizontalKnobMargin="2"
