--- a/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
+++ b/Demo/App/Controls/CustomSwitchExamples/AndroidSwitch.xaml
@@ -1,9 +1,11 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <ContentView x:Class="App.Controls.CustomSwitchExamples.AndroidSwitch"
              xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch">
+             xmlns:control="clr-namespace:App.Controls.CustomSwitchExamples"
+             xmlns:switch="clr-namespace:IeuanWalker.Maui.Switch;assembly=IeuanWalker.Maui.Switch"
+             x:DataType="control:AndroidSwitch">
     <switch:CustomSwitch BackgroundColor="#A6A6A6"
                          HeightRequest="20"
                          HorizontalOptions="Center"
